Fixed input width on mobile devices

--- a/feedhq/feeds/static/feeds/css/partials/_320.scss
+++ b/feedhq/feeds/static/feeds/css/partials/_320.scss
@@ -89,8 +89,13 @@
 			text-align: left;
 		}
 
-		.input input[type="checkbox"] {
-			width: auto;
+		.input input {
+			&[type="text"], &[type="password"] {
+				width: 94%;
+			}
+			&[type="checkbox"] {
+				width: auto;
+			}
 		}
 	}
 
